src/styles/Portfolio.css
@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");

.portfolio-container {
  display: flex;
  height: 100%;
  width: 100%;
  gap: 0.5rem;
  background: black;
}

.project-slider {
  height: 100%;
  width: calc((6 / 7 * 100%) + 0.5rem);
  position: relative;
  overflow: auto;
  scroll-snap-type: y mandatory;
  scrollbar-width: none;
  -ms-overflow-style: none;
  scroll-behavior: smooth;
}

.portfolio-scroll-bar {
  background: rgb(63, 63, 63);
  height: 100%;
  width: calc((1 / 7 * 100%) - 0.5rem);
}

.project-slider::-webkit-scrollbar {
  display: none;
}

.project-card {
  height: 100%;
  margin-top: 0;
  scroll-snap-align: start;
  scroll-snap-stop: normal;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  background: black;
}

.project-index {
  flex-direction: row;
}

.index-column-1 {
  width: calc((5 / 6 * 100%) + 1.25rem);
  height: 100%;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.project-index-title {
  background: white;
  height: 20%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.card-row-1 {
  display: flex;
  gap: 0.5rem;
  background: black;
  height: 80%;
}

.index-project-list {
  background: white;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.project-list-box {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.project-list-box a {
  text-decoration: none;
  color: black;
  padding-left: 20px;
  padding-right: 20px;
}

.project-list-box svg {
  font-size: 32px;
  color: grey;
  transition: all 0.3s ease;
}

.index-icon-container {
  border: 2px solid black;
  border-radius: 50%;
  padding: 0.5rem;
  width: 40px;
  height: 40px;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: all 0.3s ease;
}

.project-link {
  display: flex;
  align-items: center;
  gap: 0.5rem;
  height: 70px;
}

.project-link:hover {
  color: rgba(239, 68, 68);
}

.project-link:hover .index-icon-container {
  border: 2px solid rgba(185, 28, 28);
  background: rgba(239, 68, 68);
  transition: all 0.3s ease;
}

.project-link:hover svg {
  color: white;
  transition: all 0.3s ease;
}

.index-column-2 {
  background: white;
  height: 100%;
  width: calc(1 / 6 * 100%);
  display: flex;
  justify-content: center;
  align-items: flex-end;
}

.arrow-down {
  border: 2px solid black;
  border-radius: 50%;
  padding: 0.5rem;
  width: 35px;
  height: 35px;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: all 0.3s ease;
}

.margin-bottom-35 {
  margin-bottom: 35px;
}

.arrow-down svg {
  font-size: 30px;
  color: black;
}

.arrow-down:hover .bounce {
  animation: bounce 2s;
}

@keyframes bounce {
  0%,
  25%,
  50%,
  75%,
  100% {
    transform: translateY(0);
  }
  10% {
    transform: translateY(-20px);
  }
  40% {
    transform: translateY(-12px);
  }
}

.card-row-2 {
  background: white;
  height: 20%;
  display: flex;
  gap: 0.5rem;
}

.project-card-description {
  display: flex;
  align-items: center;
  text-align: left;
  margin-left: 5px;
  margin-right: 5px;
  width: calc((5 / 6 * 100%) + 1.25rem - 10px);
  height: 100%;
}

.card-row-2-arrow {
  height: 100%;
  width: calc(1 / 6 * 100%);
  display: flex;
  justify-content: center;
  align-items: center;
}

.image-block {
  display: flex;
  flex-direction: column;
  width: calc((5 / 6 * 100%) + 1.25rem);
  height: 100%;
  gap: 0.5rem;
}

.project-image {
  width: 100%;
  height: 100%;
  background: rgb(46, 46, 46);
  color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  position: relative;
  overflow: hidden;
}

.project-title {
  font-size: 40px;
}

.punch-card-styles {
  font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
}

.calculator-styles {
  font-family: "Montserrat", sans-serif;
}

.star-wars-styles {
  font-family: "Press Start 2P", cursive;
  font-size: 34px;
}

.project-image img {
  height: auto;
  width: auto;
  max-width: 100%;
  max-height: 100%;
  position: absolute;
  visibility: hidden;
  transform: translateY(100%);
  transition: all 0.5s ease;
}

.project-image:hover img {
  height: auto;
  visibility: visible;
  transform: translateY(0%);
}

.project-card h3 {
  margin: 0;
}

.project-card-buttons {
  display: flex;
  justify-content: center;
  gap: 0.5rem;
}

.project-button {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0.5rem;
  background: rgb(90, 90, 90);
  padding: 0.5rem;
  text-decoration: none;
  width: 100%;
  color: white;
  transition: all 0.3s ease;
}

.project-button:hover {
  cursor: pointer;
  background: rgba(239, 68, 68, 1);
}

.project-button:hover svg {
  transform: scale(1.4);
  transition: all 0.3s ease;
}

.tech-list {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-size: 35px;
  margin: auto;
  gap: 1rem;
  background: white;
  height: 100%;
  width: calc(1 / 6 * 100%);
}

